--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#Contact-Me">Contact Me</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="#">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -31,20 +31,34 @@
 
     <div class="hero"></div>
 
-    <div class="about-me">
+    <section id="about-me" class="about-me">
         <h2>About Me</h2>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi molestias quasi nam! Provident velit temporibus corporis odio ullam error hic enim, esse optio eos, minima sit, ad aspernatur quod libero!
         </p>
-    </div>
+    </section>
 
-    <div class="work">
+    <section id="work" class="work">
         <h2>Work</h2>
-    </div>
+    </section>
 
-    <footer>
+    <footer id="contact-me">
         <h2>Contact Me</h2>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:Steven.Bendrick@gmail.com">Steven.Bendrick@gmail.com</a>
+                </li>
+                <li>
+                    <a href="tel:+12037889035">203-788-9035</a>
+                </li>
+                <li>
+                    <a href="https://github.com/SteveB29" target="_blank" rel="noreferrer noopener">GitHub</a>
+                </li>
+            </ul>
+        </address>
     </footer>
+
 </body>
 
 </html>
