--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <footer id="contact-me">
-        <h2>Contact Me</h2>
+        <h2>Contact<br>Me</h2>
         <address>
             <ul>
                 <li>
