--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
     <div class="hero"></div>
 
     <section id="about-me" class="about-me">
-        <h2>About Me</h2>
+        <h2 class="section-title">About<br>Me</h2>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi molestias quasi nam! Provident velit temporibus corporis odio ullam error hic enim, esse optio eos, minima sit, ad aspernatur quod libero!
         </p>
     </section>
 
     <section id="work" class="work">
-        <h2>Work</h2>
+        <h2 class="section-title">Work</h2>
     </section>
 
     <footer id="contact-me">
-        <h2>Contact<br>Me</h2>
+        <h2 class="section-title">Contact<br>Me</h2>
         <address>
             <ul>
                 <li>
