--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </nav>
     </header>
 
-    <div class="hero"></div>
+    <div class="hero">
+        <p>
+            Subtitle text!
+        </p>
+    </div>
 
     <section id="about-me" class="about-me">
         <h2 class="section-title">About<br>Me</h2>
