--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
 
     <section id="work" class="work">
         <h2 class="section-title">Work</h2>
+            <div class="applications">
+                <a href="https://steveb29.github.io/run-buddy/" target="_blank" class="primary-application">
+                </a>
+                <div>
+                    <a href="https://steveb29.github.io/horiseon-refactor/" target="_blank" class="secondary-application float-left img1">
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank" class="secondary-application float-right img2">
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Web_API" target="_blank" class="secondary-application float-left img3">
+                    </a>
+                    <a href="https://en.wikipedia.org/wiki/Node.js" target="_blank" class="secondary-application float-right img4">
+                    </a>
+                </div>
+            </div>
     </section>
 
     <footer id="contact-me">
