--- a/index.html
+++ b/index.html
@@ -46,15 +46,35 @@
         <h2 class="section-title">Work</h2>
             <div class="applications">
                 <a href="https://steveb29.github.io/run-buddy/" target="_blank" class="primary-application">
+                    <div class="app-tag">
+                        <h2>Run Buddy</h2>
+                        <p>HTML / CSS</p>
+                    </div>
                 </a>
                 <div>
                     <a href="https://steveb29.github.io/horiseon-refactor/" target="_blank" class="secondary-application float-left img1">
+                        <div class="app-tag">
+                            <h2>Horiseon Refactor</h2>
+                            <p>HTML / CSS</p>
+                        </div>
                     </a>
                     <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank" class="secondary-application float-right img2">
+                        <div class="app-tag">
+                            <h2>Javascript</h2>
+                            <p>js</p>
+                        </div>
                     </a>
                     <a href="https://en.wikipedia.org/wiki/Web_API" target="_blank" class="secondary-application float-left img3">
+                        <div class="app-tag">
+                            <h2>Web-APIs</h2>
+                            <p>js</p>
+                        </div>
                     </a>
                     <a href="https://en.wikipedia.org/wiki/Node.js" target="_blank" class="secondary-application float-right img4">
+                        <div class="app-tag">
+                            <h2>Node</h2>
+                            <p>Node</p>
+                        </div>
                     </a>
                 </div>
             </div>
