--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <section id="work" class="work">
         <h2 class="section-title">Work</h2>
             <div class="applications">
-                <a href="https://steveb29.github.io/run-buddy/" target="_blank" class="primary-application">
+                <a href="https://michellewehr.github.io/MovieFoodie/" target="_blank" class="primary-application">
                     <div class="app-tag">
-                        <h2>Run Buddy</h2>
-                        <p>HTML / CSS</p>
+                        <h2>MovieFoodie</h2>
+                        <p>HTML/CSS/JS</p>
                     </div>
                 </a>
                 <div>
@@ -58,22 +58,22 @@
                             <p>HTML / CSS</p>
                         </div>
                     </a>
-                    <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank" class="secondary-application float-right img2">
+                    <a href="https://steveb29.github.io/run-buddy/" target="_blank" class="secondary-application float-right img2">
                         <div class="app-tag">
-                            <h2>Javascript</h2>
-                            <p>js</p>
+                            <h2>Run-Buddy</h2>
+                            <p>HTML / CSS</p>
                         </div>
                     </a>
-                    <a href="https://en.wikipedia.org/wiki/Web_API" target="_blank" class="secondary-application float-left img3">
+                    <a href="https://steveb29.github.io/weather-dashboard/" target="_blank" class="secondary-application float-left img3">
                         <div class="app-tag">
-                            <h2>Web-APIs</h2>
-                            <p>js</p>
+                            <h2>Weather report</h2>
+                            <p>HTML/CSS/JavaScript</p>
                         </div>
                     </a>
-                    <a href="https://en.wikipedia.org/wiki/Node.js" target="_blank" class="secondary-application float-right img4">
+                    <a href="https://steveb29.github.io/work-day-scheduler/" target="_blank" class="secondary-application float-right img4">
                         <div class="app-tag">
-                            <h2>Node</h2>
-                            <p>Node</p>
+                            <h2>Workday Scheduler</h2>
+                            <p>JavaScript</p>
                         </div>
                     </a>
                 </div>
