--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" href="./assets/images/Portfolio icon.png">
     <title>Steve Bendrick Portfolio</title>
 </head>
 
