started media queries

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p>HTML/CSS/JS</p>
                     </div>
                 </a>
-                <div>
+                <div class="secondary-block">
                     <a href="https://steveb29.github.io/horiseon-refactor/" target="_blank" class="secondary-application float-left img1">
                         <div class="app-tag">
                             <h2>Horiseon Refactor</h2>
