--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     <section id="about-me" class="about-me">
         <h2 class="section-title">About<br>Me</h2>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi molestias quasi nam! Provident velit temporibus corporis odio ullam error hic enim, esse optio eos, minima sit, ad aspernatur quod libero!
+            My name is Steven Bendrick. I graduated from the University of Connecticut with a degeree in Chemical Engineering. 
+            After graduating, I found a job doing database work in the Alumni and Development department at a local nonprofit boarding school. 
+            I grew to enjoy doing database work and enjoyed learning more and more about the database. 
+            After 5 years at the school, I noticed the database world was moving more and more towards online applications. 
+            I decided to enroll in the Uconn Coding Bootcamp to get into the world of online solutions. 
+            I look forward to using my technical skills as a trained engineer and my first hand experience of helping end-users use online applications.
         </p>
     </section>
 
@@ -93,6 +98,12 @@
                 </li>
                 <li>
                     <a href="https://github.com/SteveB29" target="_blank" rel="noreferrer noopener">GitHub</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/steven-bendrick-7778b5134/" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="./assets/Resume/Steven-Bendrick-Resume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>
                 </li>
             </ul>
         </address>
