added subtitle, edited about me and readme

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#">Resume</a>
+                    <a href="./assets/Resume/Steven-Bendrick-Resume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
 
     <div class="hero">
         <p>
-            Subtitle text!
+            Details Matter
         </p>
     </div>
 
@@ -41,8 +41,8 @@
         <p>
             My name is Steven Bendrick. I graduated from the University of Connecticut with a degeree in Chemical Engineering. 
             After graduating, I found a job doing database work in the Alumni and Development department at a local nonprofit boarding school. 
-            I grew to enjoy doing database work and enjoyed learning more and more about the database. 
-            After 5 years at the school, I noticed the database world was moving more and more towards online applications. 
+            I grew to enjoy doing database work and enjoyed learning more and more about how it all works. 
+            After 5 years at the school, I noticed the database world was moving towards online applications. 
             I decided to enroll in the Uconn Coding Bootcamp to get into the world of online solutions. 
             I look forward to using my technical skills as a trained engineer and my first hand experience of helping end-users use online applications.
         </p>
@@ -101,9 +101,6 @@
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/steven-bendrick-7778b5134/" target="_blank" rel="noreferrer noopener">LinkedIn</a>
-                </li>
-                <li>
-                    <a href="./assets/Resume/Steven-Bendrick-Resume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>
                 </li>
             </ul>
         </address>
