updated to include PepWeb group project

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     </div>
                 </a>
                 <div class="secondary-block">
-                    <a href="https://steveb29.github.io/horiseon-refactor/" target="_blank" class="secondary-application float-left img1">
+                    <a href="https://glacial-plains-14244.herokuapp.com/" target="_blank" class="secondary-application float-left img1">
                         <div class="app-tag">
-                            <h2>Horiseon Refactor</h2>
-                            <p>HTML / CSS</p>
+                            <h2>PepWeb</h2>
+                            <p>HTML/CSS/Node/JavaScript</p>
                         </div>
                     </a>
                     <a href="https://steveb29.github.io/run-buddy/" target="_blank" class="secondary-application float-right img2">
@@ -91,7 +91,7 @@
         <address>
             <ul>
                 <li>
-                    <a href="mailto:Steven.Bendrick@gmail.com">Steven.Bendrick@gmail.com</a>
+                    <a href="mailto:Steven.Bendrick@gmail.com" target="_blank" rel="noreferrer noopener">Steven.Bendrick@gmail.com</a>
                 </li>
                 <li>
                     <a href="tel:+12037889035">203-788-9035</a>
